# Weaver

./: .gitignore  README.md
example/: array.wvr  atomic.wvr  exp1x3.wvr  exp2x3.wvr  mult-dist.wvr  security.wvr  simple-equiv.wvr  simple-while.wvr  state_explode.wvr  test.wvr
example/bench/: array-eq-symm.wvr  lamport.wvr  mult-dist.wvr  security.wvr  unroll2.wvr  unroll3.wvr
example/bt/: bt10.wvr  bt2.wvr  bt3.wvr  bt4.wvr  bt5.wvr  bt6.wvr  bt7.wvr  bt8.wvr  bt9.wvr
example/simple/: equal.wvr  equal_fail.wvr  simple.wvr  simple_fail.wvr  test_array.wvr
example/ticket/: ticket2.wvr  ticket2b.wvr  ticket3.wvr  ticket4.wvr  ticket5.wvr  ticket6.wvr  ticket7.wvr  ticket8.wvr
src/: CMakeLists.txt  weaver.cpp
src/cmake/: ExternalAntlr4Cpp.cmake
src/grammar/: WeaverLexer.g4  WeaverParser.g4  test.sh
src/libs/ast/: AST.cpp  AST.h  ASTBuilder.cpp  ASTBuilder.h  ASTNode.cpp  ASTNode.h  CMakeLists.txt  VariableTable.cpp  VariableTable.h
src/libs/automata/: CMakeLists.txt  DFA.cpp  DFA.h  FiniteAutomataBase.cpp  FiniteAutomataBase.h  LoopingTreeAutomata.cpp  LoopingTreeAutomata.h  NFA.cpp  NFA.h  ProofAutomata.cpp  ProofAutomata.h
src/libs/cfg/: CFGBuilder.cpp  CFGBuilder.h  CMakeLists.txt
src/libs/config/: CMakeLists.txt  Config.cpp  Config.h  config.cpp  config.h
src/libs/frontend/: WeaverLexer.cpp  WeaverLexer.h  WeaverLexer.interp  WeaverParser.cpp  WeaverParser.h  WeaverParser.interp  WeaverParser.tokens  WeaverParserBaseVisitor.cpp  WeaverParserBaseVisitor.h  WeaverParserVisitor.cpp  WeaverParserVisitor.h
src/libs/program/: CMakeLists.txt  Program.cpp  Program.h  Statement.cpp  Statement.h  Thread.h
src/libs/theoremprover/: CMakeLists.txt  MathSAT.h  SMTInterpol.cpp  SMTInterpol.h  SMTSolverBase.cpp  SMTSolverBase.h  SSANumberingTable.cpp  SSANumberingTable.h  TheoremProverBase.cpp  TheoremProverBase.h  Yices.h
src/libs/util/: AntiChain.cpp  AntiChain.h  CMakeLists.txt  Log.cpp  Log.h  Set.cpp  Set.h  String.cpp  String.h  Timer.cpp  Timer.h  log.cpp  log.h  util.cpp  util.h
src/libs/verifier/: CMakeLists.txt  FiniteAutomataVerifier.cpp  FiniteAutomataVerifier.h  InterpolantAutomataBuilder.cpp  InterpolantAutomataBuilder.h  LoopingTreeAutomataVerifier.cpp  LoopingTreeAutomataVerifier.h  MathSAT.cpp  MathSAT.h  ParallelProgramVerifier.cpp  ParallelProgramVerifier.h  SMTInterpol.cpp  SMTInterpol.h  SequentialProgramVerifier.cpp  SequentialProgramVerifier.h  TheoremProverBase.cpp  TheoremProverBase.h  VerifierBase.cpp  VerifierBase.h  Yices.cpp  Yices.h
src/test/: CMakeLists.txt  test.cpp  testSMT.cpp
